2010-03-30  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Documented that specifying --seed-time=0 disables seeding after
	download completed.
	* doc/aria2c.1.txt

2010-03-30  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Code cleanup
	* src/BtSetup.cc

2010-03-30  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Drop connection if same Peer ID has been already seen.
	* src/DefaultBtInteractive.cc

2010-03-29  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that waiting download unintentionally starts when
	URIs are added to it using aria2.changeUri XML-RPC method.  This
	also fixes the bug that causes segmentation fault when adding URIs
	to waiting download, which is a regression introduced by the
	previous change made to src/XmlRpcMethodImpl.cc
	* src/XmlRpcMethodImpl.cc

2010-03-29  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed compile error with g++-4.4 on FreeBSD.
	* src/util.h

2010-03-28  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that added URI using aria2.changeUri XML-RPC method
	is not used immediately if there is no URIs remaining before
	calling aria2.changeUri and the number of connection is less than
	the value in -s(or -C for Metalink downloads).
	* src/XmlRpcMethodImpl.cc

2010-03-28  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Documented --always-resume and --max-resume-failure-tries option
	and exit status 8 in man page. Fixed typo.
	* doc/aria2c.1.txt
	* src/OptionHandlerFactory.cc

2010-03-28  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added --always-resume and --max-resume-failure-tries option.  If
	--always-resume=false is given, when all given URIs does not
	support resume or aria2 encounters N URIs which does not support
	resume
        (N is the value specified using --max-resume-failure-tries
	option), aria2 download file from scratch.  The default behavior