@@ -1200,10 +1200,28 @@ OptionHandlers OptionHandlerFactory::createOptionHandlers()
   }
   {
     SharedHandle<NumberOptionHandler> op(new NumberOptionHandler
+                                         (PREF_BT_TRACKER_CONNECT_TIMEOUT,
+                                          TEXT_BT_TRACKER_CONNECT_TIMEOUT,
+                                          "60",
+                                          1, 600));
+    op->addTag(TAG_BITTORRENT);
+    handlers.push_back(op);
+  }
+  {
+    SharedHandle<NumberOptionHandler> op(new NumberOptionHandler
                                          (PREF_BT_TRACKER_INTERVAL,
                                           TEXT_BT_TRACKER_INTERVAL,
                                           "0",
                                           0));
+    op->addTag(TAG_BITTORRENT);
+    handlers.push_back(op);
+  }
+  {
+    SharedHandle<NumberOptionHandler> op(new NumberOptionHandler
+                                         (PREF_BT_TRACKER_TIMEOUT,
+                                          TEXT_BT_TRACKER_TIMEOUT,
+                                          "60",
+                                          1, 600));
     op->addTag(TAG_BITTORRENT);
     handlers.push_back(op);
   }
