@@ -217,8 +217,6 @@ TrackerWatcherCommand::createRequestGroup(const std::string& uri)
   std::vector<std::string> uris;
   uris.push_back(uri);
   SharedHandle<RequestGroup> rg(new RequestGroup(getOption()));
-  // If backup tracker is available, only try 2 times for each tracker
-  // and if they all fails, then try next one.
   if(backupTrackerIsAvailable(_requestGroup->getDownloadContext())) {
     if(logger->debug()) {
       logger->debug("This is multi-tracker announce.");
@@ -228,11 +226,16 @@ TrackerWatcherCommand::createRequestGroup(const std::string& uri)
       logger->debug("This is single-tracker announce.");
     }
   }
+  // If backup tracker is available, try 2 times for each tracker
+  // and if they all fails, then try next one.
   rg->getOption()->put(PREF_MAX_TRIES, "2");
   // TODO When dry-run mode becomes available in BitTorrent, set
   // PREF_DRY_RUN=false too.
   rg->getOption()->put(PREF_USE_HEAD, V_FALSE);
-
+  // Setting tracker timeouts
+  rg->setTimeout(rg->getOption()->getAsInt(PREF_BT_TRACKER_TIMEOUT));
+  rg->getOption()->put(PREF_CONNECT_TIMEOUT,
+                       rg->getOption()->get(PREF_BT_TRACKER_CONNECT_TIMEOUT));
   static const std::string TRACKER_ANNOUNCE_FILE("[tracker.announce]");
   SharedHandle<DownloadContext> dctx
     (new DownloadContext(getOption()->getAsInt(PREF_SEGMENT_SIZE),
